objects/Country__c.object
<CustomObject>
    <fields>
        <fullName>ISO_Code_2__c</fullName>
        <label>ISO Code (2)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Code_3__c</fullName>
        <label>ISO Code (3)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ISO_Code_2__c</columns>
        <columns>ISO_Code_3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>